New generics and improvements

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,17 +23,17 @@ library(D3mirt)
 
 The `D3mirt` analysis is based on descriptive multidimensional item response theory (DMIRT; Reckase, 2009, 1985; Reckase & McKinley, 1991) and can be used to analyze dichotomous and polytomous items (Muraki & Carlson, 1995) in a three-dimensional ability ($\theta$) space. The method is foremost visual and illustrates item characteristics with the help of vector geometry in which items are represented by vector arrows.
 
-In DMIRT analysis, also called within multidimensional modeling, it is assumed that items in a multidimensional ability space can measure single or multiple latent traits (Reckase, 2009, 1985; Reckase & McKinley, 1991). The methodology is a type of data reduction technique based on the compensatory model (Reckase, 2009), i.e., a type of measurement model that uses linear combinations of $\theta$-values for ability assessment. The method seeks to maximize item discrimination and so is *descriptive* because the results describe the extent to which items in a test are unidimensional, i.e., that the items discriminate on one dimension only, or are within-multidimensional, i.e., that the items discriminate on more than one dimension..
+In DMIRT analysis, also called within multidimensional modeling, it is assumed that items in a multidimensional ability space can measure single or multiple latent traits (Reckase, 2009, 1985; Reckase & McKinley, 1991). The methodology is a type of data reduction technique based on the compensatory model (Reckase, 2009), i.e., a type of measurement model that uses linear combinations of $\theta$-values for ability assessment. The method seeks to maximize item discrimination and so is *descriptive* because the results describe the extent to which items in a test are unidimensional, i.e., that the items discriminate on one dimension only, or are within-multidimensional, i.e., that the items discriminate on more than one dimension.
 
 Regarding vector orientation, the angle of the vector arrows indicates what traits, located along the orthogonal axes in the model, an item can be said to describe (Reckase, 2009, 1985, Reckase & McKinley, 1991). For instance, in a two-dimensional space, an item is *unidimensional* if its item vector arrow is at $0°$ with respect to one of the axes in the model, and $90°$ with respect to the other. Such an item describes a singular trait only. In contrast, an item is *within-multidimensional* if its item vector arrow is oriented at $45°$ in relation to the axes in the model. Such an item describes both traits in the model equally well. The same criteria are extended to the three-dimensional case.
 
 The DMIRT approach uses two types of item models, dependent on item type. If dichotomous items are used, the analysis is based on the multidimensional two-parameter logistic model (M2PL). If polytomous items are used, the analysis is based on the multidimensional two-parameter graded response model (MGRM; Muraki & Carlson, 1995). The method is therefore limited to items that fit these item models.
 
-The estimation process begins by first fitting and extracting the discrimination $a$ and difficulty parameters $d$ from a compensatory model. Next, the DMIRT estimation uses the former to compute the multidimensional discrimination ($MDISC$) parameter and the multidimensional difficulty ($MDIFF$) parameter that are used to locate the items in a vector space.
+The estimation process begins by first fitting and extracting the discrimination $a$ and difficulty parameters $d$ from a compensatory model. Next, the DMIRT estimation uses the former to compute the multidimensional discrimination ($MDISC$) parameter and the multidimensional difficulty ($MDIFF$) parameter that is used to locate the items in a vector space.
 
 The $MDIFF$ is interpreted similarly as the difficulty parameter in the unidimensional model, i.e., it shows the level of ability that is required for a higher or correct response. Note, if polytomous items are used, such as Likert items, the items will be represented by multiple vector arrows (one for each response function). The $MDIFF$ will, in such a case, show the multidimensional range of difficulty for an item as located in a multidimensional latent trait space.
 
-The $MDISC$ shows the highest level of discrimination an item can achieve in the multidimensional model. It is, therefore, a global item characteristic under the assumption of a multidimensional latent space. In addition, the $MDISC$ score is visualized in the graphical output by scaling the length of the vector arrows representing the item response functions, such that longer arrows indicate higher discrimination (and vice versa).
+The $MDISC$ shows the highest level of discrimination an item can achieve in the multidimensional model. It is, therefore, a global item characteristic assuming a multidimensional latent space. In addition, the $MDISC$ score is visualized in the graphical output by scaling the length of the vector arrows representing the item response functions, such that longer arrows indicate higher discrimination (and vice versa).
 
 A novel theoretical contribution to DMIRT is the use of constructs in the `D3mirt` functions. Constructs, in this context, refer to the assumption that a subset of items can measure a higher-order latent variable. In `D3mirt`, constructs are implemented as optional vectors whose orientation is calculated as the average direction, i.e., the average multidimensional discrimination of a subset of items (from one item to all items in the set) in the model. A construct vector will, therefore, point in the direction of the maximum slope of an imaginary item response function indicated by the items chosen by the user.
 
@@ -41,12 +41,11 @@ If constructs are used, the output will include reporting of the directional dis
 
 # Overview
 
-The package includes the following functions.
+The package includes the following main functions.
 
 -   `modid()`: D3mirt Model Identification
 -   `D3mirt()`: 3D DMIRT Model Estimation
--   `summary()`: Summary Function for `D3mirt()`
--   `plotD3mirt`: Graphical Output for `D3mirt()`
+-   `plot()`: Graphical Output for `D3mirt()`
 
 ## Installation
 
@@ -76,45 +75,39 @@ For more details on the `D3mirt` package, including extended examples of analysi
 
 As a first step in the analysis, the three-dimensional compensatory model must be identified (Reckase, 2009). In the three-dimensional case, this implies locating the $x$ and $y$-axis by selecting two items from the item set. The first item should not load on the second and third axes ($y$ and $z$), while the second item should not load on the third axis ($z$).
 
-If the model is not known beforehand it is necessary to explore the data with exploratory factor analysis (EFA), preferably with the help of the EFA option in `mirt::mirt` (Chalmers, 2012), using `ìtemtype = 'graded'` or `'2PL'`. Note, the EFA is only used to find model identification items that meet the necessary DMIRT model specification requirements. The EFA model itself is discarded after this step in the procedure. This implies that rotation method is less crucial and the user is encouraged to try different rotation methods and compare the results.
+If the model is not known beforehand it is necessary to explore the data with exploratory factor analysis (EFA), preferably with the help of the EFA option in `mirt::mirt` (Chalmers, 2012), using `ìtemtype = 'graded'` or `'2PL'`. Note, the EFA is only used to find model identification items that meet the necessary DMIRT model specification requirements. The EFA model itself is discarded after this step in the procedure. This implies that the rotation method is less crucial and the user is encouraged to try different rotation methods and compare the results.
 
-Note, all outputs from functions from the `mirt` package are available as ready made package files that can be loaded directly into the R session.
+Note, all outputs from functions from the `mirt` package are available as ready-made package files that can be loaded directly into the R session.
 
 ```{r, message = FALSE, results = 'hide', eval = FALSE}
 # Load data
 data("anes0809offwaves")
 x <- anes0809offwaves
 x <- x[,3:22] # Remove columns for age and gender
-
-# Fit a three-factor EFA model with the mirt package
-e <- mirt::mirt(x, 3, itemtype = 'graded')
-
-# Assign data frame with factor loadings with oblimin rotation
-f <- summary(e, rotate= 'oblimin')
-h <- data.frame(f$rotF)
 ```
 
-```{r, message = FALSE, include = FALSE}
-# Optional: Load the EFA data directly from the package file
-load("vignettes/efa.Rdata")
-```
+The `modid()` can take in raw item data or a data frame with item factor loadings. If raw data is used, the function first performs an EFA, with three factors as default, and then finishes with the model identification. The output consists of an $S3$ object of class `modid` containing data frames with model identification items, order of factor strength (based on sum of squares), and item factor loadings. The function has two arguments: the *lower* and *upper* bound. In brief, the lower bound increase the item pool used in the procedure while the upper bound acts as a filter that removes items that do not meet the necessary statistical requirements. This implies that the upper bound should not, in general, be manipulated.
 
-The `modid()` takes in the factor solution from the EFA, assigned to a data frame $h$, and outputs an $S3$ object of class `modid` containing lists with data frames of estimates. The functions have two arguments that set what is called the *lower* and *upper* bound. In brief, the lower bound increase the item pool used in the analysis while the upper bound is a filter that removes improper items that do not meet the necessary statistical requirements. In other words, the upper bound should not, in general, be manipulated.
+The `summary()` function prints the number of items and the number of factors used in the analysis together with the suggested model identification items. As can be seen, the items suggested by `modid()` are the items "W7Q3" and "W7Q20". The output also includes data frames that hold all the model identification items (`Item.1...Item.n`) selected by `modid()` together with the items' absolute sum score (`ABS`), one frame for the sum of squares for factors sorted in descending order, and one frame for item factor loadings. The order of the factors follows the model identification items so that item 1 comes from the strongest factor (sorted highest up), item 2 from the second strongest (sorted second), and so on.
 
-The most important output from the `modid()` function is the item lists, (denoted `$id`), containing data frames that present suggestions on what items (`item.1`...`item.n`) to use for the model identification. The data frames have one column for the loadings from each item on the factor of interest, and one column with absolute sum scores (denoted `ABS`) for each item calculated from the remaining factor loadings in the model. Each item list is sorted with the lowest absolute sum score highest up. Consequently, the top items in each list are the items that best meet the necessary statistical requirements for model identification. Therefore, for a three-dimensional model, all else equal, the item highest up in the first list should be used to identify the $x$-axis, and the item highest up in the second list should be used to identify the $y$-axis, and so on.
+The absolute sum scores indicate statistical fit to the structural assumptions of the DMIRT model and the items are, therefore, sorted with the lowest absolute sum score highest up. The top items are the items that best meet the necessary statistical requirements for model identification. For a three-dimensional model this implies that the item highest up in the first data frame should be used to identify the $x$-axis, and the item highest up in the second data frame should be used to identify the $y$-axis, and so on.
 
 ```{r}
-# Call to modid()
-modid(h)
+# Optional: Load the EFA data for this example directly from the package file
+load(system.file("efa.Rdata", package = "D3mirt"))
+
+# Call to modid() with h, containing factors scores from EFA
+a <- modid(x, efa = FALSE)
+summary(a)
 ```
 
-As can be seen, the first item, that will be used to identify the $x$-axis, is found in the first list, `id[[1]]` and `item.1`. In this case, the best item for the $x$-axis is item "W7Q3". The item that identifies the $y$-axis is found in the next list, `id[[2]]` and `Item.2`. In this case, the best item for the $y$-axis is item "W7Q20".
+The `summary()` function prints the number of items and the number of factors used in the analysis together with the suggested model identification items. As can be seen, the items that are suggested by `modid()` to identify the model are the items "W7Q3", for the $x$-axis, and "W7Q20", for the $y$-axis.
 
 The `modid()` is designed so that the strongest loading item, from the strongest factor, always aligns perfectly with the x-axis, and the remaining items follow thereafter. This helps makes the result maximally interpretable while also avoiding, with the help of the upper bound, imposing an unempirical structure on the data. If problems appear with the model identification, please see the package vignette for guidance.
 
 # 2. D3mirt Model Estimation
 
-The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and spherical coordinates. Regarding the latter, spherical coordinates are represented by $\theta$ and $\phi$. The $\theta$ coordinate is the positive or negative angle in degrees, starting from the $x$-axis, of the vector projections from the vector arrows in the $xz$-plane up to $\pm 180°$. Note, the $\theta$ angle is oriented following the positive pole of the $x$ and $z$ axis so that the angle increases clockwise in the graphical output. The $\phi$ coordinate is the positive angle in degrees from the $y$-axis and the vectors. Note, the $\rho$ coordinate from the spherical coordinate system is in DMIRT represented by the MDIFF, and so is reported separately.
+The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model (either in the form of a data frame or an S4 object of class 'SingleGroupClass' exported from `mirt::mirt` (Chalmers, 2012) function) and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and spherical coordinates. Regarding the latter, spherical coordinates are represented by $\theta$ and $\phi$. The $\theta$ coordinate is the positive or negative angle in degrees, starting from the $x$-axis, of the vector projections from the vector arrows in the $xz$-plane up to $\pm 180°$. Note, the $\theta$ angle is oriented following the positive pole of the $x$ and $z$ axis so that the angle increases clockwise in the graphical output. The $\phi$ coordinate is the positive angle in degrees from the $y$-axis and the vectors. Note, the $\rho$ coordinate from the spherical coordinate system is in DMIRT represented by the MDIFF, and so is reported separately.
 
 If constructs are used, the function also returns construct direction cosines, spherical coordinates for the construct vector arrows, and $DDISC$ parameters (one index per construct).
 
@@ -147,83 +140,76 @@ x <- x[,3:22] # Remove columns for age and gender
            FIXED=(W7Q20,a3) '
 
 
-mod1 <- mirt::mirt(x, 
+mod.1 <- mirt::mirt(x, 
                    spec, 
                    itemtype = 'graded', 
                    SE = TRUE, 
                    method = 'QMCEM')
- 
-# Assign a data frame with factor loadings (located in the first three columns in mod1),
-# and difficulty parameters (columns 4-8 in mod1) with mirt::coef and $'items'[,1:8]))
-d <- data.frame(mirt::coef(mod1, 
-                           simplify=TRUE)$'items'[,1:8])
 ```
 
-```{r, message = FALSE, include = FALSE}
-# Optional: Load data frame d directly from the package file
-load("vignettes/d.rdata")
-```
-
-Constructs can be included in the analysis by creating one or more nested lists that indicate what items belong to what construct. Such a nested list can contain all items in the set down to a single item. From this, the `D3mirt()` function finds the average direction of the subset of items contained in each nested list by adding and normalizing the direction cosines for the items and scaling the construct direction vector to an arbitrary length (length can be adjusted by user) so that the the arrows can be seen when plotting.
+Constructs can be included in the analysis by creating one or more nested lists that indicate what items belong to what construct. Such a nested list can contain all items in the set down to a single item. From this, the `D3mirt()` function finds the average direction of the subset of items contained in each nested list by adding and normalizing the direction cosines for the items and scaling the construct direction vector to an arbitrary length (length can be adjusted by the user) so that the arrows can be seen when plotting.
 
 The construct vector arrows can contribute to the analysis by (a) visualizing the average direction for a subset set of items, and (b) showing how all items discriminate locally in the direction of the construct vector with the help of the $DDISC$ index.
 
-The `D3mirt()` function call is straightforward. The output, however, is lengthy so the use of the summary function when inspecting the results is recommended. The constructs included below were grouped based on exploratory reasons, i.e., because these items cluster in the model (will be observable in the graphical output).
+In this example, the S4 object `mod.1` from the `mirt` estimation above is used directly in the call to `D3mirt()`, and the `summary()` function, included in the package, is used to inspect the DMIRT estimates. The constructs included below were grouped based on exploratory reasons, i.e., because these items cluster in the model (observable in the graphical output).
 
 ```{r}
+# Optional: Load the mod.1 data for this example directly from the package file
+load(system.file("mod.1.Rdata", package = "D3mirt"))
+
 # Call to D3mirt(), including optional nested lists for three constructs
 # Item W7Q16 is not included in any construct because of model violations
 # The model violations for the item can be seen when plotting the model
-c <- list(list(1,2,3,4), 
-          list(5,7,8,9,10), 
-          list(11,12,13,14,15,15,16,17,18,19,20))
-g <- D3mirt(d, c)
+c <- list(list(1,2,3,4,5,6,7,8,9,10),
+          list(11,12,13,14),
+          list(15,17,18,19,20))
+g <- D3mirt(mod.1, c)
 summary(g)
 ```
 
+The `D3mirt()` function prints a short report containing the number of items used and the levels of difficulty of the items when the estimation is done. As can be seen, when construct vectors are used, the function also prints the number of construct vectors and the names of the items included in each construct. Next, the factor loadings and the difficulty parameters from the compensatory model are reported in data frames followed by all necessary DMIRT estimates.
+
 # 3. Plotting
 
-## The `plotD3mirt` Function
+## The `plot()` Function
 
-The `plotD3mirt` function is built on the `rgl` package (Adler & Murdoch, 2023) for visualization with OpenGL. Graphing in default mode by calling `plotd3mirt` will return an RGL device that will appear in an external window as a three-dimensional interactive object, containing vector arrows with the latent dimensions running along the orthogonal axes, that can be rotated. In this illustration, however, all RGL devices are plotted inline as still shots from two angles, $15^{\circ}$ (clockwise; default plot angle) and $90^{\circ}$. To change the plot output to $90^{\circ}$, use the `view` argument in the `plotD3mirt` function and change the first indicator from $15$ to $90$.
+The `plot()` function is built on the `rgl` package (Adler & Murdoch, 2023) for visualization with OpenGL. Graphing in default mode by calling `plot()` will return an RGL device that will appear in an external window as a three-dimensional interactive object, containing vector arrows with the latent dimensions running along the orthogonal axes, that can be rotated. In this illustration, however, all RGL devices are plotted inline as still shots from two angles, $15^{\circ}$ (clockwise; default plot angle) and $90^{\circ}$. To change the plot output to $90^{\circ}$, use the `view` argument in the `plot()` function and change the first indicator from $15$ to $90$.
 
 ```{r, eval = FALSE}
 # Plot RGL device with constructs visible and named
-plotD3mirt(g, 
-           constructs = TRUE, 
-           construct.lab = c("Fairness", "Conformity", "Compassion"))
+plot(g, constructs = TRUE, 
+        construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
-![anesdata0809offwaves](anes1.png)Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Conformity, and Fairness (solid black arrows) plotted with the model rotated $15^{\circ}$ clock wise.
+![anesdata0809offwaves](anes1.png)Figure 1: Three-dimensional vector plot for all items and the three constructs Compassion, Conformity, and Fairness (solid black arrows) plotted with the model rotated $15^{\circ}$ clockwise.
 
-![anesdata0809offwaves](anes2.png)Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Conformity, and Fairness (solid black arrows) plotted with the model rotated $90^{\circ}$ clock wise.
+![anesdata0809offwaves](anes2.png)Figure 2: Three-dimensional vector plot for all items and the three constructs Compassion, Conformity, and Fairness (solid black arrows) plotted with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
-> As can be seen in Figures 1 and 2, the pattern in the data indicates the presence of foremost two main nested latent constructs indicated by the items, one aligned with the $x$-axis and one approaching the $y$-axis. We might also suspect the presence of a third construct located close to the $xy$-plane, between the $x$ and $z$ axes. Studying the content of the items, the labels *Compassion*, *Conformity*, and *Fairness* were introduced. The angles of the constructs inform us that Compassion ($\theta = 1.710^{\circ}$, $\phi = 86.486^{\circ}$) and Conformity ($\theta = - 2.519^{\circ}$, $\phi = 28.192^{\circ}$) have some within-multidimensional tendencies. However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710^{\circ}$ and $\theta = -2.519^{\circ}$ respectively). Next, we find Fairness ($\theta = 49.106^{\circ}$, $\phi = 78.308^{\circ}$) with clear within-multidimensional tendencies with respect to the $x$-axis. Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
+> As can be seen in Figures 1 and 2, the pattern in the data indicates the presence of foremost two main nested latent constructs indicated by the items, one aligned with the $x$-axis and one approaching the $y$-axis. We might also suspect the presence of a third construct located close to the $xy$-plane, between the $x$ and $z$ axes. Studying the content of the items, the labels *Compassion*, *Fairness*, and *Conformity* were introduced. The angles of the constructs inform us that Compassion ($\theta = 2.092^{\circ}$, $\phi = 86.061^{\circ}$) and Conformity ($\theta = -2.514 ^{\circ}$, $\phi = 28.193^{\circ}$) have some within-multidimensional tendencies. However, they are both more or less orthogonal to the $z$-axis. Next, we find Fairness ($\theta = 49.101^{\circ}$, $\phi = 78.313^{\circ}$) with clear within-multidimensional tendencies with respect to the $x$-axis. Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
 
 As was mentioned above, the W7Q16 was not included in any of the constructs because the item had measurement problems. For example, the short vector arrows indicate high amounts of model violations. Moreover, the location of the item in the model also indicates that the item is within-multidimensional and that it does not seem to belong to any construct explicitly.
 
-The `plotD3mirt()` function allows plotting W7Q16 in isolation using the argument `items` and by entering the number indicating where the item appears in the data set (see `?anes0809offwaves`).
+The `plot()` function allows plotting W7Q16 in isolation using the argument `items` and by entering the number indicating where the item appears in the data set (see `?anes0809offwaves`).
 
 ```{r, eval = FALSE}
-# Item W7Q16 has location 6 in the data set (gender and age excluded)
+# Item W7Q16 has location 16 in the data set (gender and age excluded)
 # The item is plotted together with construct to aid the visual interpretation
-plotD3mirt(g, 
-           constructs = TRUE, 
-           items = 6, 
-           construct.lab = c("Fairness", "Conformity", "Compassion"))
+plot(g, constructs = TRUE, 
+        items = 16, 
+        construct.lab = c("Compassion", "Fairness", "Conformity"))
 ```
 
 ![anesdata0809offwaves](item1.png)Figure 3: The item W7Q16 plotted with the three constructs and with the model rotated $15^{\circ}$ clock wise. ![anesdata0809offwaves](item2.png)Figure 4: The item W7Q16 plotted with the three constructs and with the model rotated $90^{\circ}$ clock wise.
 
 An example of how the output can be described could be as follows.
 
-> The Figures 3 and 4 shows that item W7Q16 is located at $\theta = 16.083^{\circ}$, $\phi = 57.473^{\circ}$, indicating that the item is within-multidimensional with respect to the $x$ and $y$-axis; but much less so with respect to the $z$-axis. In addition, the directional discrimination further underscores that the item does not seem to measure any particular construct ($DDISC_1 = .656$, $DDISC_2 = .656$, $DDISC_3 = .617$). The global discrimination ($MDISC = .770$, $MDIFF_{range} = [-4.838, 2.349]$) is also the lowest of all discrimination scores in the model. This, combined, implies that the item in question does not seem to fit the three-dimensional DMIRT model used in this analysis and should therefore be removed or adapted. On a side note, we can also note that item W7Q15, $MDISC = .923$, $MDIFF_{range} = [-4.680, 1.051]$) has the second lowest global discrimination score. However, this item does seem to belong to the Conformity construct, observable when comparing angle orientation ($\theta = -19.436^{\circ}, \phi = 31.516^{\circ}$) and discrimination ($MDISC = .923$, $DDISC_1 = .332$, $DDISC_2 = .912$, $DDISC_3 = .497$).
+> The Figures 3 and 4 shows that item W7Q16 is located at $\theta = 16.085^{\circ}$, $\phi = 57.476^{\circ}$, indicating that the item is within-multidimensional with respect to the $x$ and $y$-axis; but much less so with respect to the $z$-axis. In addition, the directional discrimination further underscores that the item does not seem to measure any particular construct ($DDISC_1 = .657$, $DDISC_2 = .617$, $DDISC_3 = .656$). The global discrimination ($MDISC = .770$, $MDIFF_{range} = [-4.838, 2.349]$) is also the lowest of all discrimination scores in the model. This, combined, implies that the item in question does not seem to fit the three-dimensional DMIRT model used in this analysis and should therefore be removed or adapted. On a side note, we can also note that item W7Q15, $MDISC = .923$, $MDIFF_{range} = [-4.680, 1.051]$) has the second lowest global discrimination score. However, this item does seem to belong to the Conformity construct, observable when comparing angle orientation ($\theta = -19.432^{\circ}, \phi = 31.515^{\circ}$) and direction discrimination ($DDISC_1 = .502$, $DDISC_2 = .332$, $DDISC_3 = .912$).
 
 ## `D3mirt` Profile Analysis
 
-The `plotD3mirt()` function can also display respondents in the three-dimensional model represented as spheres located using respondent factors scores used as coordinates. This allows for a profile analysis in which respondents can be separated, or subset, conditioned on single or multiple criteria and then plotted. The resulting output shows where the respondents are located in the model, and, accordingly, what model profile best describes them. Similarly, respondent categories can be simultaneously compared to see if a group-level effect can be visually observed.
+The `plot()` function can also display respondents in the three-dimensional model represented as spheres located using respondent factors scores used as coordinates. This allows for a profile analysis in which respondents can be separated, or subset, conditioned on single or multiple criteria and then plotted. The resulting output shows where the respondents are located in the model, and, accordingly, what model profile best describes them. Similarly, respondent categories can be simultaneously compared to see if a group-level effect can be visually observed.
 
 To do this, the user must first extract respondent factor scores with `mirt::fscores` (Chalmers, 2012) and then separate or select a subset of respondent rows based on one or more criteria. The resulting data frame is imputed in the `profiles` argument. Generally, it can be useful to hide vector arrows with `hide = TRUE` when plotting respondent profiles to avoid visual cluttering. The example below separates respondents using the gender variable included in the built-in data set.
 
@@ -235,12 +221,10 @@ f <- mirt::fscores(mod1,
                    full.scores.SE = FALSE, QMC = TRUE)
 ```
 
-```{r, message = FALSE, include = FALSE}
-# Optional: Load the respondent factor scores directly from the package file
-load("vignettes/fscores.Rdata")
-```
-
 ```{r}
+# Optional: Load the respondent factor scores for this example directly from the package file
+load(system.file("fscores.Rdata", package = "D3mirt"))
+
 # Attach f to the gender variable (column 2 from anes0809offwaves data set; "W3XGENDER")
 # Use cbind with fscores() output attached first
 data("anes0809offwaves")
@@ -248,20 +232,20 @@ x <- anes0809offwaves
 z <- data.frame(cbind(f, x[,2]))
 ```
 
-The `plotD3mirt` function uses `as.factor()` to count the number of factor levels in the data imputed in the `levels` argument. This means that raw data can be used as is but the number of colors in the color vectors argument (`sphere.col`) may need to be adapted. In the example below, the criteria variable for gender only hold two factor levels and therefore only two colors in the color vector are needed.
+The `plot()` function uses `as.factor()` to count the number of factor levels in the data imputed in the `levels` argument. This means that raw data can be used as is but the number of colors in the color vectors argument (`sphere.col`) may need to be adapted. In the example below, the criteria variable for gender only hold two factor levels and therefore only two colors in the color vector are needed.
 
-Call `plotD3mirt` with the respondent data frame $z$ in the `profiles` argument and the `levels` argument with the levels column subset from $z$. In the function call below, the axes in the model are named using the `x.lab`, `y.lab`, and `z.lab` arguments following the direction of the constructs. Note, the model axes represent unidimensional singular structures, or traits, in this case borrowing the names of the constructs.
+Call `plot()` with the respondent data frame $z$ in the `profiles` argument and the `levels` argument with the levels column subset from $z$. In the function call below, the axes in the model are named using the `x.lab`, `y.lab`, and `z.lab` arguments following the direction of the constructs. Note, the model axes represent unidimensional singular structures, or traits, in this case borrowing the names of the constructs.
 
 ```{r, eval = FALSE}
 # Plot profiles with item vector arrows hidden with hide = TRUE
 # Score levels: 1 = Blue ("male") and 2 = Red ("female")
-plotD3mirt(g, hide = TRUE, 
-           profiles = z, 
-           levels = z[,4], 
-           sphere.col = c("blue", "red"), 
-           x.lab = "Compassion", 
-           y.lab="Conformity", 
-           z.lab="Fairness")
+plot(g, hide = TRUE, 
+     profiles = z, 
+     levels = z[,4], 
+     sphere.col = c("blue", "red"), 
+     x.lab = "Compassion", 
+     y.lab="Conformity", 
+     z.lab="Fairness")
 ```
 
 ![anesdata0809offwaves](p1.png)Figure 5: Gender profile for the `anes0809offwaves` data set plotted with the model rotated $15^{\circ}$ clock wise.
@@ -284,7 +268,7 @@ y <- data.frame(cbind(f, x[,1]))
 z1 <- subset(y, y[,4] <= 30)
 ```
 
-When a criterion variable has a wide data range, such as an age variable, `rep()` can be used to set the appropriate size of the color vector for `sphere.col` by repeating color names with `rep()`. When plotting,the `plotD3mirt()` function will pick colors from the `sphere.col` argument following the factor order in the levels argument. To do this, the first step is to count the number of factors in the criterion variable. This can be done with `nlevels()`, as can be seen below.
+When a criterion variable has a wide data range, such as an age variable, `rep()` can be used to set the appropriate size of the color vector for `sphere.col` by repeating color names with `rep()`. When plotting, the `plot()` function will pick colors from the `sphere.col` argument following the factor order in the levels argument. To do this, the first step is to count the number of factors in the criterion variable. This can be done with `nlevels()`, as can be seen below.
 
 ```{r}
 # Check number of factor levels with nlevels() and as.factor()
@@ -298,22 +282,22 @@ colvec <- c(rep("red", 14))
 To plot the *CI*, the `ci` argument is set to `TRUE`. The color of the sphere was also changed from default `grey80` to `orange` in the example below. Note, the *CI* limit can be adjusted with the `ci.level` argument.
 
 ```{r, , eval = FALSE}
-# Call plotD3mirt with profile data on age with item vector arrows hidden
-plotD3mirt(g, hide = TRUE, 
-           profiles = z1, 
-           levels = z1[,4], 
-           sphere.col = colvec, 
-           x.lab = "Compassion", 
-           y.lab="Conformity", 
-           z.lab="Fairness", 
-           ci = TRUE, 
-           ci.level = 0.95, 
-           ellipse.col = "orange")
+# Call plot() with profile data on age with item vector arrows hidden
+plot(g, hide = TRUE, 
+     profiles = z1, 
+     levels = z1[,4], 
+     sphere.col = colvec, 
+     x.lab = "Compassion", 
+     y.lab="Conformity", 
+     z.lab="Fairness", 
+     ci = TRUE, 
+     ci.level = 0.95, 
+     ellipse.col = "orange")
 ```
 
-![anesdata0809offwaves](ci1.png)Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clock wise.
+![anesdata0809offwaves](ci1.png)Figure 7: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $15^{\circ}$ clockwise.
 
-![anesdata0809offwaves](ci2.png)Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clock wise.
+![anesdata0809offwaves](ci2.png)Figure 8: Adults less than or equal to age 30 from the `anes0809offwaves` data set plotted surrounded by a $95\%\,CI$ and with the model rotated $90^{\circ}$ clockwise.
 
 An example of how the output can be described could be as follows.
 
@@ -324,17 +308,15 @@ An example of how the output can be described could be as follows.
 Some options for exporting the RGL device are shown below. Over and above these, it is also possible to export graphical devices in R Markdown documents with `rgl::hookwebgl()` together with graphical options for knitr, as was done when creating this vignette.
 
 ```{r, eval = FALSE}
-# Export an open RGL device to the console that can be saved as a html or image file
-plotD3mirt(g, 
-           constructs = TRUE)
+# Export an open RGL device to the console that can be saved as an html or image file
+plot(g, constructs = TRUE)
 s <- scene3d()
 rgl::rglwidget(s, 
                width = 1040, 
                height = 1040)
 
 # Export a snap shoot of an open RGL device directly to file
-plotD3mirt(g, 
-           constructs = TRUE)
+plot(g, constructs = TRUE)
 rgl::rgl.snapshot('RGLdevice.png', 
                     fmt = 'png')
 ```
